# riimut-rs

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  publish.yml  test.yml
src/: lib.rs  transform.rs  younger_futhark.rs
src/dictionary/: mod.rs
src/elder_futhark/: mapping.rs  mod.rs
src/futhorc/: mapping.rs  mod.rs
src/medieval_futhork/: mapping.rs  mod.rs
src/staveless_futhark/: mapping.rs  mod.rs
src/younger_futhark/: mapping.rs  mod.rs
tests/: integration-tests.rs  integration_tests.rs
