[package]
name = "riimut"
version = "1.2.1"
authors = ["stscoundrel / Sampo Silvennoinen"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stscoundrel/riimut-rs"
description = """
Transform latin letters to runes &amp; vice versa.
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
